--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<meta name="mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-capable" content="yes">
-		<meta name="application-name" content="Camera app">
-		<meta name="apple-mobile-web-app-title" content="Camera app">
+		<meta name="application-name" content="Snappy Cam">
+		<meta name="apple-mobile-web-app-title" content="Snappy Cam">
 
 		<!-- Name of the app -->
-		<title>Camera App</title>
+		<title>Snappy Cam</title>
 
 		<!-- Link to site manifest -->
 		<link rel="manifest" href="site.webmanifest">
